[tool.poetry]
name = "table"
version = "0.1.0"
description = ""
authors = ["Satoshi Terasaki <terasakisatoshi.math@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.1"
jpholiday = "^0.1.5"
dash = "^1.19.0"
dash-table = "^4.11.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.7.0"
mypy = "^0.800"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
